Написал html для секции header

--- a/index.html
+++ b/index.html
@@ -6,3 +6,24 @@
         <title>BeanCoffee</title>
         <link rel="stylesheet" href="assets/css/style.css" />
     </head>
+    <body>
+        <header class="header">
+            <div class="container">
+                <div class="header__wrapper">
+                    <a href="#" class="header__logo"> <img src="/assets/img/logo.svg" alt="Logo" /></a>
+                    <ul class="header__list">
+                        <li class="header__item">
+                            <a href="#" class="header__link">О нас</a>
+                        </li>
+                        <li class="header__item">
+                            <a href="#" class="header__link">Наши предложения</a>
+                        </li>
+                        <li class="header__item">
+                            <a href="#" class="header__link">Забронируйте столик</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </header>
+    </body>
+</html>
