Написал html для секции intro

--- a/index.html
+++ b/index.html
@@ -25,5 +25,16 @@
                 </div>
             </div>
         </header>
+        <main class="main">
+            <section class="Intro">
+                <div class="container">
+                    <div class="Intro__wrapper">
+                        <p class="intro__text">Творим<br>Красоту<br>Своими<br>Руками<br></p>
+                        <a href="#" class="intro__link">Заказать столик</a>
+                        <img src="/assets/img/Rectangle 1.png" alt="Coffe" class="intro__img">
+                    </div>
+                </div>
+            </section>
+        </main>
     </body>
 </html>
