Внес изменение в html секцию intro

--- a/index.html
+++ b/index.html
@@ -29,9 +29,13 @@
             <section class="Intro">
                 <div class="container">
                     <div class="Intro__wrapper">
-                        <p class="intro__text">Творим<br>Красоту<br>Своими<br>Руками<br></p>
-                        <a href="#" class="intro__link">Заказать столик</a>
-                        <img src="/assets/img/Rectangle 1.png" alt="Coffe" class="intro__img">
+                        <div class="intro__left">
+                            <p class="intro__text">Творим<br />Красоту<br />Своими<br />Руками<br /></p>
+                            <a href="#" class="intro__link">Заказать столик</a>
+                        </div>
+                        <div class="intro__right">
+                            <img src="/assets/img/Rectangle 1.png" alt="Coffe" class="intro__img" />
+                        </div>
                     </div>
                 </div>
             </section>
