Написал scss для секции intro

--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
             </div>
         </header>
         <main class="main">
-            <section class="Intro">
+            <section class="intro">
                 <div class="container">
-                    <div class="Intro__wrapper">
+                    <div class="intro__wrapper">
                         <div class="intro__left">
-                            <p class="intro__text">Творим<br />Красоту<br />Своими<br />Руками<br /></p>
+                            <p class="intro__text">Творим<br />Красоту<br />Своими<br />Руками</p>
                             <a href="#" class="intro__link">Заказать столик</a>
                         </div>
                         <div class="intro__right">
-                            <img src="/assets/img/Rectangle 1.png" alt="Coffe" class="intro__img" />
+                            <img src="/assets/img/Rectangle 1.png" alt="Coffee" class="intro__img" />
                         </div>
                     </div>
                 </div>
