Написал scss для секции info

--- a/index.html
+++ b/index.html
@@ -39,6 +39,24 @@
                     </div>
                 </div>
             </section>
+            <section class="Info">
+                <div class="container">
+                    <div class="info__wrapper">
+                        <p class="info__title">О нас:</p>
+                        <p class="info__text">
+                            Аромат свежесваренного кофе наполняет уютное пространство нашей<br />кофейни, создавая
+                            атмосферу тепла и комфорта. Здесь каждый гость найдет<br />идеальный напиток, будь то
+                            классический эспрессо, нежный капучино или<br />оригинальный латте с искусно выполненным
+                            рисунком. Мы гордимся<br />
+                            качеством наших зерен, заботливо обжаренных и приготовленных<br />профессиональными бариста.
+                            Кофе дополняют вкуснейшие десерты ручной<br />работы, созданные специально для наслаждения
+                            каждым моментом.<br />Приходите к нам отдохнуть от суеты города, провести встречу с друзьями
+                            или<br />насладиться книгой в спокойствии. Наша кофейня ждет вас, чтобы подарить<br />
+                            незабываемые минуты удовольствия.
+                        </p>
+                    </div>
+                </div>
+            </section>
         </main>
     </body>
 </html>
